# shai

./: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/io/: csv.rs  mod.rs  reader.rs  writer.rs  yaml.rs
src/model/: config.rs  constraints.rs  dispatch.rs  mod.rs  person.rs  planning.rs  rules.rs  shift.rs
src/solver/: backtracking.rs
