[package]
name = "shai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

chrono = "0.4"
csv = "1.1"

env_logger = "0.9"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
